# project-meguru

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  bt_mac_test.c  main.c  motor_test.c  servo_reset_test.c
main/includes/: gap_config.c  gap_config.h  gatt_service.c  gatt_service.h  i2c9555.c  i2c9555.h  nimble.c  nimble.h
